# peppolling

./: LICENSE  README.md  pyproject.toml
peppolling/: __init__.py  peppol_bookkeeping.py
tests/: test_receive.py  test_receive_mock.py  test_send.py  test_send_mock.py
tests/fixtures/: invoice_minimal.xml
